# are-you-a-criminal-ML

./: .gitignore  README.md  manifest.csv  manifest.random_backup.csv  pyproject.toml  requirements.txt  scrape_captura.py  scrape_interpol.py
DEA/: metadata.json  summary.json
analisis_report/: dados.txt  processing_report.csv
artifacts/: extract_metadata.json  manifest.strict026.csv  semantic_manifest_report.json  semantic_manifest_report.strict026.json  similarity_app.err
artifacts/audit/: audit_samples.csv  audit_summary.json  index.html
artifacts/audit_smoke/: audit_samples.csv  index.html
artifacts/audit_strict026/: audit_samples.csv  audit_summary.json  index.html
artifacts/eval/: eval_scores.csv  metrics.json
artifacts/eval_strict026/: eval_scores.csv  metrics.json
artifacts/live_analysis/: api_score_after_retrain.json  person_filter_score.json  score_uploaded_screenshot.json
artifacts/model/: calibration_metrics.json  calibration_scores.csv  calibrator.pkl  calibrator_metadata.json  model_metadata.json  profile_embeddings.npy  (+3 more)
configs/: profile_config.json
docs/: final_report.md
face_profile_ml/: __init__.py  calibration.py  cli.py  extractor.py  manifest.py  metrics.py  profile.py  utils.py
scripts/: README.md  build_audit_report.py  build_semantic_manifest.py  extract_photos.py  filter_dataset.py  preprocess_config.json  preprocess_faces.py  recover_rejected_passport.py  scrape_dea_fugitives.js  scrape_eu_most_wanted.py  scrape_fbi_criminals.py  serve_similarity_app.py  standardize_faces.py
tests/: test_metrics_profile.py
(+28 files in other folders)
